edited contacts, section-2

--- a/src/html/includes/templates/banner.html
+++ b/src/html/includes/templates/banner.html
@@ -5,7 +5,7 @@
                 <div class="banner__inner">
                     <h2 class="title banner__title">Main Banner</h2>
                     <p class="banner__text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos eligendi impedit magni nisi perferendis, perspiciatis praesentium quis quos ratione similique tempora, tempore tenetur voluptate voluptatem. Expedita illum numquam placeat.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos eligendi impedit magni nisi perferendis
                     </p>
                 </div>
             </div>
