--- a/src/html/includes/templates/contacts.html
+++ b/src/html/includes/templates/contacts.html
@@ -17,9 +17,9 @@
                                         <h4 class="bold-text">
                                             Telegram
                                         </h4>
-                                        <a href="https://t.me/ashuksu" class="link">https://t.me/ashuksu</a>
+                                        <a href="<%=tg_dev%>" class="link"><%=tg_dev%></a>
                                     </div>
-                                    <a href="https://t.me/ashuksu" class="btn">
+                                    <a href="<%=tg_dev%>" class="btn">
                                         Go
                                         <span class="btn-icon">
                                              <img src="img/icons/13.svg" alt="icon">
@@ -38,9 +38,9 @@
                                         <h4 class="bold-text">
                                             Email
                                         </h4>
-                                        <a href="mailto:ashuksu@gmail.com" class="link">ashuksu@gmail.com</a>
+                                        <a href="mailto:<%=email_dev%>" class="link"><%=email_dev%></a>
                                     </div>
-                                    <button class="btn" data-copy="wecan.wave@gmail.com">
+                                    <button class="btn" data-copy="<%=email_dev%>">
                                         Copy
                                         <span class="btn-icon">
                                             <img src="img/icons/12.svg" alt="icon">
