--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -3,7 +3,11 @@
     site: "Site name",
     description: "Home page description",
     homepage: "Home page homepage",
-    url_home: "/"
+
+    url_home: "https://ashuksu.github.io/landingpage/public/",
+    url_dev: "https://github.com/ashuksu/",
+    email_dev: "ashuksu@gmail.com",
+    tg_dev: "https://t.me/ashuksu",
 }; %>
 
 <%= _.template(require('./../includes/head.html').default)(data) %>
