--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -5,7 +5,7 @@
                     <a href="<%=url_home%>" class="logo">
                         <img src="img/logo-3.png" alt="<%=site%>" width="70" height="70">
                     </a>
-                    <a class="footer__dev" href="https://github.com/ashuksu/" target="_blank">
+                    <a class="footer__dev" href="<%=url_dev%>" target="_blank">
                         ASHUKSU
                     </a>
                 </div>
