--- a/src/scss/parts/banner.scss
+++ b/src/scss/parts/banner.scss
@@ -1,7 +1,18 @@
 .banner {
   &__bg {
-    //background-image: url('../uploads/banner-bg.jpg');
     @extend %bg-cover;
+    position: relative;
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: rgba($color-dark, 0.5);
+      z-index: 1;
+    }
   }
 
   &__inner {
@@ -10,6 +21,8 @@
     min-height: 280px;
     padding: 60px 0;
     margin: 0 auto;
+    position: relative;
+    z-index: 5;
 
     @include response-min(768px) {
       min-height: 400px;
@@ -42,6 +55,6 @@
     max-width: 555px;
     text-align: center;
     color: #fff;
-    line-height: 130%;
+    line-height: 150%;
   }
 }
