--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,10 +1,9 @@
 <% var data = {
     title: "Home page title",
-    site: "Site name",
+    site_name: "Runes",
     description: "Home page description",
-    homepage: "Home page homepage",
 
-    url_home: "https://ashuksu.github.io/landingpage/public/",
+    url_home: "https://ashuksu.github.io/runes/public/",
     url_dev: "https://github.com/ashuksu/",
     email_dev: "ashuksu@gmail.com",
     tg_dev: "https://t.me/ashuksu",
