checked naming, rebuilded

--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -3,7 +3,7 @@
             <div class="container">
                 <div class="footer__inner">
                     <a href="<%=url_home%>" class="logo">
-                        <img src="img/logo-3.png" alt="<%=site%>" width="70" height="70">
+                        <img src="img/logo-3.png" alt="<%=site_name%>" width="70" height="70">
                     </a>
                     <a class="footer__dev" href="<%=url_dev%>" target="_blank">
                         ASHUKSU
