--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__inner">
             <a href="<%=url_home%>" class="logo">
-                <img src="img/logo-1.png" alt="<%=site%>" width="28" height="28">
+                <img src="img/logo-1.png" alt="<%=site_name%>" width="28" height="28">
             </a>
 
             <div class="menu" data-menu="opener">
