--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -2,6 +2,7 @@
     title: "Home page title",
     site_name: "Runes",
     description: "Home page description",
+    homepage: "Home page",
 
     url_home: "https://ashuksu.github.io/runes/public/",
     url_dev: "https://github.com/ashuksu/",
